test(catalog): update handler tests for new implementation